Agrega layout.scss para estructura general del sitio

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,4 @@
 @import 'blog';          // Estilos específicos del blog
 @import 'contacto';      // Estilos de la sección de contacto
 @import 'footer';        // Estilos del pie de página
+@import 'layout';
