Actualización de archivos HTML y SCSS para mejorar la estructura y el estilo del sitio

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,8 +2,7 @@
 // Estilos generales que se aplican a todo el sitio (reset básico, tipografía, etc.)
 
 body {
-  margin: 0;
-  font-family: $fuente-principal;
+  font-family: 'Raleway', sans-serif;
   background-color: $color-fondo;
   color: $color-texto-principal;
 }
